bug fix: changing the frontend input text color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
     <div class="bg-slate-800 rounded-xl shadow-lg p-4 mb-6">
       <div class="flex gap-3">
         <input id="todoInput" placeholder="What needs to be done?"
-          class="flex-1 px-4 py-2 rounded-lg bg-slate-900 border border-slate-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 " />
+          class="flex-1 px-4 py-2 rounded-lg bg-slate-900 border border-slate-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white" />
         <button id="add"
           class="bg-indigo-600 hover:bg-indigo-700 px-4 py-2 rounded-lg font-medium transition hover:cursor-pointer">
           Add
